syntax = "proto3";

package proto;

option go_package = "./internal/proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status = 1;
  string message = 2;
  repeated ResponseError error = 3;
}

message ResponseError {
  string field = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string message = 2;
  DataLoginResponse data = 3;
  repeated ResponseError error = 4;
}

message DataLoginResponse {
  string access_token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  string message = 2;
  UserData data = 3;
}

message UserData {
  string id = 1;
  string email = 2;
}